@@ -4,7 +4,10 @@ Griffith ChangeLog
 ------------------
 (c) 2005-2007  Vasco Nunes, Piotr Ożarowski
 
-2007-08-05  Piotr Ożarowski
+2007-08-26  Piotr Ożarowski
+	* Fix encoding problems in backup function
+
+2007-08-23  Piotr Ożarowski
 	* Export disc number instead of medium id in HTML export plugin
 
 2007-08-16  Michael Jahn
